# ai-playwright-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  100_PERCENT_COMPLETE.md  =2.0.0  AGENT_ARCHITECTURE.md  AI_AGENT_TEST_REPORT.md  ALL_PHASES_COMPLETE.md  API_DESIGN.md  BDD_CONVERSION_FIXES.md  CHANGELOG.md  CLI_USABILITY_GUIDE.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_TEST_SUITE_RESULTS.md  COMPONENT_SPECS.md  COMPREHENSIVE_REQUIREMENTS.json  COMPREHENSIVE_TEST_REPORT.md  CONVERSION_PLAN.md  DEV_SETUP.md  Dockerfile  EXAMPLES.md  FRAMEWORK_ARCHITECTURE.md  GAP_REMEDIATION_COMPLETE.md  GLM47_TEST_REPORT.md  GLM_AGENT_TEST_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PACKAGE_INSTALLATION_IMPROVEMENTS.md  PHASE2_META_REASONING_FLAKY_FIXES.md  PHASES_5_8_COMPLETE.md  PHASES_5_AND_8_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_AND_8_COMPLETE.md  PHOENIX_INTEGRATION.md  PROJECT_TASKS.md  PR_DESCRIPTION.md  (+56 more)
.claude/: settings.local.json
.cpa/: state.json  test_history.json
.cpa/backups/: migration_history.json
.cpa/reports/: report_0840fdd1.json
.github/workflows/: ci.yml  test.yml
.serena/: project.yml
cli/: README.md  USAGE_GUIDE.md  jest.config.js  package-lock.json  package.json
cli/examples/: advanced-ai-features.ts  phase2-meta-reasoning-flaky-fixes.ts
cli/src/: index.ts
cli/templates/python/: .env.example  README.md.ejs  behave.ini  pyproject.toml  requirements.txt  setup.py
cli/templates/python/features/: environment.py  example.feature
cli/templates/python/features/steps/: common_steps.py
cli/templates/python/helpers/: auth_helper.py  data_generator.py  healing_locator.py  logger.py  phoenix_tracer.py  reasoning.py  screenshot_manager.py  wait_manager.py
cli/templates/python/pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py
cli/templates/python/scripts/: __init__.py  setup.py
cli/templates/python/steps/: common_steps.py  environment.py
cli/tests/: pre-publish-verification.ts
config/: README.md
config/default/: behave.ini  config.yaml  pytest.ini
config/profiles/: ci.yaml  dev.yaml  prod.yaml  test.yaml
demo_e2e/: E2E_DEMO_SUMMARY.md
demo_e2e/demo_project/: config.yml  conftest.py  create_word_report.py  run_e2e_tests.py  run_tests.py
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIG.md  EXAMPLES.md  PRODUCTION_ENHANCEMENT_PROGRESS.md  QUICKSTART.md  README.md  TROUBLESHOOT.md  USER_GUIDE.md  cli_reference.md  intelligent_waits.md  page_objects.md  quick_start.md  troubleshooting.md
docs/api/: conf.py  index.md
docs/architecture/: TECHNICAL_ARCHITECTURE.md
docs/archive/: CODE_QUALITY_ANALYSIS.md  PROTOTYPE_COMPLETE.md  REFACTORING_COMPLETE.md  TASKS_COMPLETE_SUMMARY.md  TEST_RESULTS_SUMMARY.md  VALIDATION_FIXES_STATUS.md
docs/features/: ADVANCED_AI_FEATURES.md  PHOENIX_INTEGRATION.md
docs/guides/: AI_FEATURES_TEST_PLAN.md  LOGGING_GUIDE.md  NPM_PUBLISH_INSTRUCTIONS.md  PARSER_API_GUIDE.md  USAGE_GUIDE.md
docs/skills/: e1_1_project_init.md  e1_2_state_management.md  e1_3_config_management.md  e1_4_context_tracking.md  e1_5_dependency_management.md  e2_1_orchestration.md  e2_2_lifecycle.md  e2_3_communication.md  e2_4_coordination.md  e2_5_collaboration.md  e3_1_parsing.md  e3_2_validation.md  e3_3_enrichment.md  e3_4_playwright_support.md  e3_5_native.md  e4_1_deduplication.md  e4_2_element_deduplication.md  e4_3_component_extraction.md  e4_4_page_object_generation.md  e4_5_selector_catalog.md  e5_1_bdd_conversion.md  e5_2_gherkin_generation.md  e5_3_step_definitions.md  e5_4_scenario_optimization.md  e5_5_feature_management.md  e6_1_advanced_recording.md  e6_2_network_recording.md  e6_3_visual_regression.md  e6_4_performance_recording.md  e6_5_recording_enhancement.md  e7_1_registry.md  e7_2_manifest_parser.md  e7_4_lifecycle.md  e7_5_discovery.md  e8_1_error_handling.md  e8_2_interactive_prompts.md  e8_3_cli_help.md  e8_4_progress_feedback.md  e8_5_migration_tools.md  e9_1_parallel_execution.md  (+4 more)
examples/: README.md
examples/api_testing/: README.md
examples/e_commerce/: README.md
examples/scenarios/: 01_login.feature  02_search.feature  03_contact_form.feature  README.md
examples/simple_login/: README.md
examples/visual_regression/: README.md
features/: complete_login.feature  the_internet_herokuapp.feature
fixtures/: test_data.json  user_credentials.json.example
pages/: __init__.py  base_page.py
pages/examples/: dashboard_page.py  home_page.py  login_page.py
recordings/: login_test.py  sample_login.spec.js
reports/: agent_test_20260125_213330.txt  agent_test_20260125_213500.txt  agent_test_20260125_213616.txt  agent_test_20260125_213637.txt  generator.py
scripts/: generate_skill_tests.py
src/claude_playwright_agent/: __init__.py  test_discovery.py
steps/: steps.py
test_reports/: glm_agent_test_20260115_105651.txt
tests/: conftest.py
tests/agents/: test_bdd_agent.py  test_bdd_conversion.py  test_dedup_agent.py  test_deduplication.py  test_exec_agent.py  test_execution.py  test_failure_analysis.py  test_ingest_agent.py  test_orchestrator.py  test_playwright_parser.py  test_reporting.py  test_self_healing.py
tests/bdd/: __init__.py  test_bdd.py
tests/cli/: test_cli.py  test_profile_commands.py  test_skill_commands.py
tests/config/: __init__.py  test_manager.py
tests/context/: __init__.py  test_context_models.py
tests/deduplication/: test_deduplication.py
tests/e2e/: conftest.py  test_cli_to_execution.py  test_context_tracking_e2e.py  test_error_recovery_workflow.py  test_full_execution_workflow.py  test_full_ingestion_workflow.py  test_multi_skill_pipeline.py
tests/errors/: test_errors.py
tests/integration/: __init__.py  test_end_to_end.py  test_framework_integration.py  test_full_pipeline.py
tests/llm/: __init__.py  test_base.py  test_factory.py
tests/logging/: test_logging.py
tests/metrics/: test_metrics.py
tests/migration/: test_migration.py
tests/progress/: test_progress.py
tests/scaffold/: test_cicd.py
tests/skills/: test_loader.py  (+2 more)
(+392 files in other folders)
