[project]
name = "claude-playwright-agent"
version = "0.1.0"
description = "AI-powered test automation framework powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - All Rights Reserved"}
authors = [
    {name = "Claude Playwright Agent Team", email = "dev@claudeplaywright.ai"}
]
maintainers = [
    {name = "Claude Playwright Agent Team", email = "dev@claudeplaywright.ai"}
]
keywords = [
    "testing",
    "automation",
    "playwright",
    "claude",
    "ai",
    "bdd",
    "agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "playwright>=1.40.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "yamlfix>=1.16.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    # Multi-LLM provider support
    "openai>=1.10.0",
    "zhipuai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    # Testing additional providers
    "requests-mock>=1.11.0",
]
# Provider-specific extras
anthropic = [
    "claude-agent-sdk>=0.1.0",
]
openai = [
    "openai>=1.10.0",
]
glm = [
    "zhipuai>=2.0.0",
]
all-providers = [
    "claude-playwright-agent[anthropic,openai,glm]",
]
behave = [
    "behave>=1.3.0",
]
pytest-bdd = [
    "pytest-bdd>=7.0.0",
]
# Power Apps support
power-apps = [
    "msal>=1.24.0",
]
# Data generation
data = [
    "faker>=19.0.0",
]
# Visual testing
visual = [
    "pillow>=10.0.0",
]
# All features
all-features = [
    "claude-playwright-agent[power-apps,data,visual,behave,pytest-bdd,all-providers]",
]

[project.urls]
Homepage = "https://claudeplaywright.ai"
Documentation = "https://docs.claudeplaywright.ai"
Repository = "https://github.com/your-org/claude-playwright-agent"
Issues = "https://github.com/your-org/claude-playwright-agent/issues"
Changelog = "https://github.com/your-org/claude-playwright-agent/blob/main/CHANGELOG.md"

[project.scripts]
cpa = "claude_playwright_agent.cli.main:main"
claude-playwright = "claude_playwright_agent.cli.main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "ARG002", # unused method argument
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "requires_network: Tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert in production for license checks
