[project]
name = "ai-playwright-test-framework"
version = "2.0.0"
description = "AI-powered Playwright test automation framework with BDD support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Playwright Framework Team"}
]
keywords = ["playwright", "testing", "automation", "bdd", "ai", "behave"]

dependencies = [
    # Core testing framework
    "playwright>=1.40.0",
    "behave>=1.2.6",
    "pytest>=7.4.3",

    # AI providers
    "anthropic>=0.30.0",
    "openai>=1.6.1",

    # AI Observability & Tracing
    "arize-phoenix>=12.16.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",

    # Test data generation
    "faker>=20.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "structlog>=24.1.0",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",

    # Reporting
    "allure-behave>=2.13.2",
]

[project.scripts]
setup-browsers = "scripts.setup:install_browsers"
verify-setup = "scripts.setup:verify_installation"

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ============================================================================
# IMPORTANT: POST-INSTALLATION STEPS FOR UV USERS
# ============================================================================
# UV does NOT automatically install Playwright browsers.
# After running 'uv sync', you MUST also run:
#
#   uv run python -m playwright install chromium
#
# On Linux, also install system dependencies:
#   sudo playwright install-deps chromium
#
# For a one-command setup, run:
#   uv sync && uv run python -m scripts.setup
# ============================================================================
